[tool.poetry]
name = "foodsharing"
version = "0.1.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
browser-cookie3 = "^0.17.0"
ics = "^0.7.2"
arrow = "^1.2.3"
dbus-python = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
